--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  get:
+  adaptive_ui_layout:
+  flutter_staggered_animations:
+  google_fonts:
+  intl:
+  image_picker:
+  fluttertoast:
+  google_nav_bar:
+  line_icons:
+  shimmer:
+  carousel_slider:
 
 dev_dependencies:
   flutter_test:
@@ -59,9 +70,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/flaticons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
