--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,10 +50,12 @@ dependencies:
   firebase_core:
   firebase_auth:
   firebase_ui_auth: 
-  cloud_firestore: ^4.17.5
-  progress_state_button: ^1.0.4
-  uuid: ^4.4.0
-  firebase_storage: ^11.7.7
+  cloud_firestore:
+  progress_state_button:
+  uuid:
+  firebase_storage:
+  syncfusion_flutter_pdfviewer: ^25.2.7
+  
 
 dev_dependencies:
   flutter_test:
