--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   country_state_city_picker: ^1.2.8
   file_picker: ^8.0.4
   percent_indicator: ^4.2.3
+  skeletonizer: ^1.3.0
   
 
 dev_dependencies:
