--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   file_picker: ^8.0.4
   percent_indicator: ^4.2.3
   skeletonizer: ^1.3.0
+  dropdown_search: ^5.0.6
   
 
 dev_dependencies:
