--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   percent_indicator: ^4.2.3
   skeletonizer: ^1.3.0
   dropdown_search: ^5.0.6
+  video_player: ^2.9.1
+  flick_video_player: ^0.8.0
   
 
 dev_dependencies:
