--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   get:
   adaptive_ui_layout:
   flutter_staggered_animations:
+  flutter_local_notifications:
+  firebase_messaging:
   google_fonts:
   intl:
   image_picker:
