--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,10 @@ dependencies:
   progress_state_button:
   uuid:
   firebase_storage:
-  syncfusion_flutter_pdfviewer:
+  flutter_pdfview: ^1.3.2
+  # easy_pdf_viewer: ^1.0.8
+  # pdf_viewer_plugin: ^2.0.1
+  # syncfusion_flutter_pdfviewer:
   country_state_city_picker: ^1.2.8
   file_picker: ^8.0.4
   percent_indicator: ^4.2.3
