--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ dependencies:
   dropdown_search: ^5.0.6
   video_player: ^2.9.1
   flick_video_player: ^0.8.0  
+  path_provider: ^2.1.4
+  permission_handler: ^11.3.1
+  dio: ^5.5.0+1
 
 dev_dependencies:
   flutter_test:
