--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,7 +26,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.example.driving_school"
+    namespace "com.example.new_project_app"
     compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
 
