--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,37 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"driving-school-6e78e","appId":"1:693384841272:android:4aa4fe4925704f1b77becd","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"driving-school-6e78e","configurations":{"android":"1:693384841272:android:4aa4fe4925704f1b77becd"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "driving-school-6e78e",
+          "appId": "1:693384841272:android:4aa4fe4925704f1b77becd",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "driving-school-6e78e",
+          "configurations": {
+            "android": "1:693384841272:android:4aa4fe4925704f1b77becd"
+          }
+        }
+      }
+    }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
+    }
+  ]
+}
