--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,6 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-/functions/
 # Symbolication related
 app.*.symbols
 
@@ -41,3 +40,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Ignore the functions folder
+/functions/
