--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Ignore the firebase_options.dart file
+lib/firebase_options.dart
