--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   path_provider: ^2.1.4
   permission_handler: ^11.3.1
   dio: ^5.5.0+1
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
@@ -103,6 +104,7 @@ flutter:
   assets:
     - assets/images/
     - assets/flaticons/
+    - assets/lottie_files/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
